chore: add example project