@@ -1,11 +1,11 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    kotlin("jvm") version ("1.5.30")
+    kotlin("jvm")
 }
 
-val buildRelease = providers.environmentVariable("BUILD_RELEASE").forUseAtConfigurationTime()
-val buildNumber = providers.environmentVariable("BUILD_NUMBER").forUseAtConfigurationTime()
+val buildRelease: Provider<String> = providers.environmentVariable("BUILD_RELEASE").forUseAtConfigurationTime()
+val buildNumber: Provider<String> = providers.environmentVariable("BUILD_NUMBER").forUseAtConfigurationTime()
 
 allprojects {
     apply(plugin = "org.jetbrains.kotlin.jvm")
@@ -39,9 +39,26 @@ allprojects {
             archiveClassifier.set("dev")
         }
     }
+
+    kotlin {
+        kotlinDaemonJvmArgs = listOf(
+            "-Dfile.encoding=UTF-8",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
+    }
 }
 
 dependencies {
+    api(projects.annotations)
+
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.2")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.2")
 }
